# reactive-resume-api-client-py

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: release-please.yml  release.yml
.postman/: RxResumeAPI.postman_collection.json
api-reference/api/: index.html
api-reference/async_client/: index.html
api-reference/client/: index.html
api-reference/exceptions/: index.html
api-reference/models/: index.html
docs/: index.md  quickstart.md
docs/api-reference/: api.md  async_client.md  client.md  exceptions.md  models.md
docs/examples/: bulk_import.py  fast_api_app.py
docs/guides/: auth.md  resumes.md
guides/auth/: index.html
guides/resumes/: index.html
quickstart/: index.html
reactive_resume/: __init__.py
reactive_resume/api/: __init__.py  agent.py  ai.py  ai_providers.py  applications.py  auth.py  flags.py  resumes.py  statistics.py  storage.py
reactive_resume/core/: __init__.py  async_client.py  client.py  exceptions.py
reactive_resume/models/: __init__.py  agent.py  application.py  resume.py  statistics.py  storage.py  user.py
rxresume_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
search/: search_index.json
tests/: test_client_async.py  test_client_sync.py
tests/api/: test_agent.py  test_ai.py  test_ai_providers.py  test_applications.py  test_auth.py  test_flags.py  test_resumes.py  test_statistics.py  test_storage.py
tests/core/: test_client.py
