[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rxresume-python"
version = "0.5.0"
description = "Unofficial Python API client (SDK) for Reactive Resume v4"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ata Can Yaymacı"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic[email]>=2.0.0",
]
[project.optional-dependencies]
dev = [

    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["reactive_resume*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
